# world-of-might-and-magic

./: CMakeLists.txt
Arcomage/: Arcomage.cpp  Arcomage.h
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Events.cpp  IocContainer.cpp  MapInfo.cpp  SaveLoad.cpp  mm7_data.cpp  mm7_data.h
Engine/Graphics/: DecorationList.cpp  DecorationList.h  IRenderFactory.cpp  Indoor.cpp  Outdoor.cpp  Sprites.cpp  Viewport.cpp
Engine/Graphics/Direct3D/: Render.cpp
Engine/Graphics/Level/: Decoration.cpp  Decoration.h
Engine/Objects/: Actor.cpp  CMakeLists.txt  Chest.cpp  Chest.h  ControllerChest.cpp  ControllerChest.h  Items.h  ObjectList.cpp  ObjectList.h  Player.cpp  SpriteObject.cpp  SpriteObject.h
Engine/Serialization/: LegacyImages.h
Engine/Spells/: CMakeLists.txt  CastSpellInfo.cpp  Spells.cpp
GUI/: CMakeLists.txt  GUIWindow.cpp  GUIWindow.h
GUI/UI/: UIBooks.cpp  UIBooks.h  UICharacter.cpp  UIChest.cpp  UIDialogue.cpp  UIDialogue.h  UIGame.cpp  UIGuilds.cpp  UIHouses.cpp  UIHouses.h  UIInventory.cpp  UIInventory.h  UIMainMenu.cpp  UIPartyCreation.cpp  UIPopup.cpp  UIRest.cpp  UIRest.h  UISaveLoad.cpp  UIShops.cpp  UIStatusBar.cpp  UITransition.cpp
GUI/UI/Books/: AutonotesBook.cpp  CalendarBook.cpp  JournalBook.cpp  LloydsBook.cpp  MapBook.cpp  QuestBook.cpp  TownPortalBook.cpp
Media/: CMakeLists.txt
Platform/: Api.h  CMakeLists.txt
Platform/Lin/: Lin.cpp
Platform/Win/: AppSettings.cpp  Win.cpp
src/Application/: Game.cpp  GameMenu.cpp
